syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-shopping-list/api/proto/v1";

message DeleteSharedShoppingListRequest {
  string shoppingListId = 1;
  string userId = 2;
}

message DeleteSharedShoppingListResponse {
  string message = 1;
}
