syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-shopping-list/api/proto/v1";

import "v1/purchases.proto";

message GetShoppingListRequest {
  string userId = 1;
  string shoppingListId = 2;
}

message GetShoppingListResponse {
  string name = 1;
  string type = 2;
  repeated Purchase purchases = 3;
  map<string, string> recipeNames = 4;
  int32 version = 5;
}
