syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-shopping-list/api/proto/v1";

message SetShoppingListNameRequest {
  string userId = 1;
  string shoppingListId = 2;
  string name = 3;
}

message SetShoppingListNameResponse {
  string message = 1;
}
