syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-shopping-list/api/proto/v1";

import "v1/purchases.proto";

message SetShoppingListRequest {
  string editorId = 1;
  string shoppingListId = 2;
  repeated Purchase purchases = 3;
  int32 lastVersion = 5;
}

message SetShoppingListResponse {
  int32 version = 1;
}
